# Axum_Task_Manager

./: .env  Cargo.toml
.sqlx/: query-0208a4e8be7c5f855a76e8282ed2eda9660bc847cfb892fb2246d301ed7437d3.json  query-15e29f29b9c7b3ba156c8326478bd02ba64d1fa84d25ad12f0de92d3c21980d8.json  query-1edde8eb136ac2f94a8f38cb2f73c7d1633aa961f607969886676eecb986b8b7.json  query-26122bf8757894ec328fedc13f06abd084d07d3853d1179fe8a51848ee5f1e18.json  query-3d6b19f5a0d637e4547183740f1ada50d392af3ed4573d66f8ed5397bf783c09.json  query-5ecf9660ecf1eb3f2ae7e66414a8dc0629b2d88e77cd6eba1e3684ea34527d11.json  query-6f9426c8867fc2417073a64856750c27845d513bd8b0fbf4c61a06ef0a5946b8.json  query-80d20ecaf639a530dc2b2a49442c83b62e2c12f60b2c166121a7d91b689c5508.json  query-83887aa756603de83abf5c83d3a5e0bd7a0c8726a959ac8837afe0f85baee650.json  query-8b8f1c70288147624f67617714c85373082f3b8e3b0c0753ba7af52b79352826.json  query-9cc5492cda5b83885c833a4850d77387825720b97a673a1232a5fd2e96ef0e1d.json  query-9f2277513408a7465613eecc0d35394bfc22659268994e193ebad222638e1cac.json  query-c4968645cdc4c8fe0b29c174821f9105b4cec2af4ecea06ea24360b4f9b4ff06.json  query-cb0745ae7a315c2448287ff84b4acf78282db079f8c9501dddac4d2f7f182f79.json  query-cc852ea3e35b6652d4888ad0be3ab5761efcc2c38714eb76a57c86a856dad8d2.json  query-dfe372bd0c50808670b23c6fc215f1c6381863321569d0169a6cab542de99fd6.json
migrations/: 20260324175954_create_users_table.sql  20260324182759_create_projects_tables.sql  20260324183943_create_tasks_table.sql
src/: error.rs  main.rs  state.rs
src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs
(+8 files in other folders)
