[package]
name = "task_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = {version = "1",features = ["full"]}
tower = "0.5"
tower-http = {version = "0.6",features = ["cors","trace"]}
serde = {version = "1",features =["derive"]}
serde_json = "1"
sqlx = {version = "0.8",features = ["runtime-tokio","tls-native-tls","postgress","chrono","uuid","macros"]}
uuid = {version = "1",features = ["v4","serde"]}
chrono = {version = "0.4",features = ["serde"]}
jsonwebtoken = "9"

bcrypt = "0.15"
thiserror = "2"
anyhow = "1"

tracing = "0.1"
tracing_subscriber ={version = "0.3",features = ["env-filter"]}